    ADDED: action: view > Apply settings to other tabs
    ADDED: action: view > Save settings as default (for new instances of this view type)
    ADDED: option: Panel > View > Locale aware sorting

    FIXED: regression making single-click mode unusable, thanks to Kevin Kofler
    FIXED: [ 3003338 ] Rename selects extension regression, thanks to Kevin Kofler
    FIXED: [ 2980201 ] KrViewer doesn't handle binary files well (this fix works only for local files !)
    FIXED: "sort by" useractions change sorting direction randomly
    FIXED: [ 3028599 ] Sorting criteria is not saved at exit
    FIXED: [ 2949337 ] splitter ui bug
    FIXED: [ 2843749 ] view item is deselected when updated
    FIXED: brief view: mouse wheel doesn't work
    FIXED: brief view: mouse selection doesn't work in columns > columns per page
    FIXED: selecting a bigger number of files is very slow
    FIXED: [ 2969403 ] KrViewer shows old file content if file is overwritten, thanks to Kevin Kofler
    FIXED: [ 246424 (bugs.kde.org) ] krusader tries to load WHOLE big file into memory on F3
    FIXED: [ 2154760 ] Krusader erases files when opening for editing
    FIXED: changing sort direction is slow
    FIXED: [ 3015094 ] krusader doesn't exit at closing the application
    FIXED: right clicking on media button doesn't work
    FIXED: tabs were no longer movable, thanks to Victor (kernel_daemon)
    FIXED: 3 valgrind fixes by Alexander Stein
    FIXED: viewer would show empty menus, thanks to CtHx
    FIXED: crash when changing view type

2.2.0-beta1 "DeKade"
====================

    ADDED: option: Panel > General > Tabs > Show new/close tab buttons
    ADDED: options: Panel > Buttons > Show Media/History/Bookmarks Button
    ADDED: options: Panel > General > Status/Totalsbar settings >
           Show Statusbar, Show Totalsbar, Show Size In Bytes,
           Show free disk space in the Totalsbar
    ADDED: option: Look&Feel > Quicksearch > "Up/Down cancels Quicksearch"