@@ -1,0 +1,5 @@
+<!DOCTYPE kpartgui >
+<kpartgui version="1" name="krviewer" >
+    <MenuBar>
+    </MenuBar>
+</kpartgui>
