@@ -2,6 +2,7 @@
     ADDED: action: view > Save settings as default (for new instances of this view type)
     ADDED: option: Panel > View > Locale aware sorting
 
+    FIXED: [ 2981303 ] Viewer/editor unused submenu Game, thanks to Kevin Kofler
     FIXED: regression making single-click mode unusable, thanks to Kevin Kofler
     FIXED: [ 3003338 ] Rename selects extension regression, thanks to Kevin Kofler
     FIXED: [ 2980201 ] KrViewer doesn't handle binary files well (this fix works only for local files !)
